--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "toolbox-app",
   "version": "1.0.0",
+  "homepage": "https://diogo149.github.io/toolbox-app",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +27,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "file-loader": "^6.2.0",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.84.0",
     "webpack-cli": "^5.1.1",
